# job-application-assistant

./: .gitignore  README.md  config.yml  dashboard.html  docker-compose.yml  pyproject.toml
src/job_application_assistant/: crew.py  main.py  schemas.py
src/job_application_assistant/config/: agents.yaml  tasks.yaml
src/job_application_assistant/infrastructure/job_log/: job_log.py
src/job_application_assistant/routers/: command_router.py  crew_router.py  documents_router.py  files_router.py  ingestion_router.py  review_router.py  settings_router.py
src/job_application_assistant/services/: ats_optimizer.py  command_engine.py  email_monitor.py  email_sender.py  job_ingestion.py  key_vault.py
src/job_application_assistant/tools/: cover_letter_saver.py  resume_saver.py
